# ZenoChat

./: CMakeLists.txt  README.md
include/: chatserver.hpp  chatservice.hpp  public.hpp
include/server/: chatservice.hpp  user.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
